--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "dev-api",
+  "name": "dev-auth-rest-api",
   "version": "1.0.1",
   "scripts": {
-    "start": "npm run build -- port:3001 && npm run serve -- port:3001",
-    "start-with-tunnel": "npm run && npm run create-tunnel",
-    "build": "node build",
-    "serve": "node serve",
-    "create-tunnel": "ngrok tcp --remote-addr 1.tcp.ngrok.io:29182 3001"
+    "start": "node ./build & node ./serve",
+    "postinstall": "npm install express-jwt json-server jsonwebtoken opn"
   },
   "dependencies": {
-    "express-jwt": "^5.1.0",
-    "json-server": "^0.8.22",
-    "jsonwebtoken": "^7.1.9",
-    "nodemon": "^1.11.0",
-    "opn": "^4.0.2"
+    "express-jwt": "^5.3.1",
+    "json-server": "^0.13.0",
+    "jsonwebtoken": "^8.2.2",
+    "opn": "^5.3.0",
+    "server-destroy": "^1.0.1"
+  },
+  "engines": {
+    "node": ">=7.2.0 <10.0"
   }
 }
