--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.1",
   "scripts": {
     "start": "node ./build & node ./serve",
-    "postinstall": "npm install express-jwt json-server jsonwebtoken opn"
+    "postinstall": "npm install express-jwt@5.3.1 json-server@0.13.0 jsonwebtoken@8.2.2 server-destroy@1.0.1"
   },
   "dependencies": {
     "express-jwt": "^5.3.1",
     "json-server": "^0.13.0",
     "jsonwebtoken": "^8.2.2",
-    "opn": "^5.3.0",
     "server-destroy": "^1.0.1"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true
   },
   "engines": {
     "node": ">=7.2.0 <10.0"
